--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,36 @@
-click
-cryptography
-Flask
-geoip2
-jsonschema
-PyJWT
-pyotp
-qrcode
-requests
+aiohttp==3.7.2
+async-timeout==3.0.1
+attrs==20.2.0
+bandit==1.6.2
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+cryptography==3.2.1
+Flask==1.1.2
+geoip2==4.1.0
+gitdb==4.0.5
+GitPython==3.1.11
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+MarkupSafe==1.1.1
+maxminddb==2.0.3
+multidict==5.0.0
+pbr==5.5.1
+pycparser==2.20
+PyJWT==1.7.1
+pyotp==2.4.1
+pyrsistent==0.17.3
+PyYAML==5.3.1
+qrcode==6.1
+requests==2.24.0
+six==1.15.0
+smmap==3.0.4
+stevedore==3.2.2
+typing-extensions==3.7.4.3
+urllib3==1.25.11
+Werkzeug==1.0.1
+yarl==1.6.2
