--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Push to heroku
-      run: git push heroku master
+    - name: Use Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
