--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,12 @@ jobs:
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+    - name: Run Bandit (Ptyhon code checker)
+      run: bandit -r . -f html -o output/bandit/bandit-report.html
+    - name: Upload Bandit Report
+      uses: actions/upload-artifact@v2
+      with:
+        path: output/bandint/bandit-report.html
     - name: Add remote origin
       run: |
         git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
