--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Bandit (Ptyhon code checker)
-      run: bandit -r . -f html -o output/bandit/bandit-report.html
+      run: |
+        run: mkdir -p output/bandit
+        bandit -r . -f html -o output/bandit/bandit-report.html
     - name: Upload Bandit Report
       uses: actions/upload-artifact@v2
       with:
