--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Upload Bandit Report
       uses: actions/upload-artifact@v2
       with:
+        name: bandit-report
         path: dist/bandit-report.html
     - name: Add remote origin
       run: |
