--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Use Python
       uses: actions/setup-python@v2
       with:
@@ -21,17 +21,26 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Creating dist folder
-      run: mkdir -p dist
+      run: |
+        mkdir -p dist/zap
+        mkdir -p dist/bandit
     - name: Run Bandit (Ptyhon code checker)
-      run: bandit -r . -f html -o dist/bandit-report.html || true
-    - name: Upload Bandit Report
-      uses: actions/upload-artifact@v2
-      with:
-        name: bandit-report
-        path: dist/bandit-report.html
+      run: bandit -r . -f html -o dist/bandit/bandit-report.html || true
     - name: Add remote origin
       run: |
         git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
     - name: Deploy to Heroku
       run: |
         git push heroku HEAD:master -f
+    - name: Run ZAP over deployed APP
+      run: docker run -v dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
+    - name: Upload Bandit Report
+      uses: actions/upload-artifact@v2
+      with:
+        name: bandit-report
+        path: dist/bandit/bandit-report.html
+    - name: Upload ZAP Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: zap-report
+          path: dist/zap/zap-report-xml
