--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,29 +16,29 @@ jobs:
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
     - name: Creating dist folder
       run: |
         mkdir -p dist/zap
         mkdir -p dist/bandit
-    - name: Run Bandit (Ptyhon code checker)
-      run: bandit -r . -f html -o dist/bandit/bandit-report.html || true
-    - name: Add remote origin
-      run: |
-        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-    - name: Deploy to Heroku
-      run: |
-        git push heroku HEAD:master -f
+#    - name: Run Bandit (Ptyhon code checker)
+#      run: bandit -r . -f html -o dist/bandit/bandit-report.html || true
+#    - name: Add remote origin
+#      run: |
+#        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+#    - name: Deploy to Heroku
+#      run: |
+#        git push heroku HEAD:master -f
     - name: Run ZAP over deployed APP
-      run: docker run -v dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
-    - name: Upload Bandit Report
-      uses: actions/upload-artifact@v2
-      with:
-        name: bandit-report
-        path: dist/bandit/bandit-report.html
+      run: docker run -v ${{GITHUB_WORKSPACE}}/dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
+#    - name: Upload Bandit Report
+#      uses: actions/upload-artifact@v2
+#      with:
+#        name: bandit-report
+#        path: dist/bandit/bandit-report.html
     - name: Upload ZAP Report
       uses: actions/upload-artifact@v2
       with:
