--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 #      run: |
 #        git push heroku HEAD:master -f
     - name: Run ZAP over deployed APP
-      run: docker run -v ${{GITHUB_WORKSPACE}}/dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
+      run: docker run -v $GITHUB_WORKSPACE/dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
 #    - name: Upload Bandit Report
 #      uses: actions/upload-artifact@v2
 #      with:
