--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: zap-report
-        path: dist/zap/zap-report-xml
+        path: dist/zap/zap-report.xml
