--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,14 @@ jobs:
 #        git push heroku HEAD:master -f
     - name: Where is github workspace?
       run: ls $GITHUB_WORKSPACE
+    - name: Where is github workspace (2)?
+      run: ls $GITHUB_WORKSPACE/dist/zap
     - name: Run ZAP over deployed APP
       run: docker run -v $GITHUB_WORKSPACE/dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
+    - name: Where is github workspace (3)?
+      run: ls $GITHUB_WORKSPACE
+    - name: Where is github workspace (4)?
+      run: ls $GITHUB_WORKSPACE/dist/zap
 
     - name: Check dirs
       run: ls -al $GITHUB_WORKSPACE/dist/zap
