--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,37 +21,27 @@ jobs:
 #        python -m pip install --upgrade pip
 #        pip install -r requirements.txt
     - name: Creating dist folder
-      run: |
-        mkdir -p /$GITHUB_WORKSPACE/dist/zap
-        mkdir -p $GITHUB_WORKSPACE/dist/bandit
+      run: mkdir -p $GITHUB_WORKSPACE/dist
 #    - name: Run Bandit (Python code checker)
-#      run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit/bandit-report.html || true
+#      run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit-report.html || true
 #    - name: Add remote origin
 #      run: |
 #        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
 #    - name: Deploy to Heroku
 #      run: |
 #        git push heroku HEAD:master -f
-    - name: Where is github workspace?
-      run: ls $GITHUB_WORKSPACE
-    - name: Where is github workspace (2)?
-      run: ls $GITHUB_WORKSPACE/dist/zap
     - name: Run ZAP over deployed APP
-      run: docker run -v $GITHUB_WORKSPACE/dist/zap:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
-    - name: Where is github workspace (3)?
-      run: ls $GITHUB_WORKSPACE
-    - name: Where is github workspace (4)?
-      run: ls $GITHUB_WORKSPACE/dist/zap
+      run: docker run -v $GITHUB_WORKSPACE:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
 
     - name: Check dirs
-      run: ls -al $GITHUB_WORKSPACE/dist/zap
+      run: ls -al $GITHUB_WORKSPACE/dist
 #    - name: Upload Bandit Report
 #      uses: actions/upload-artifact@v2
 #      with:
 #        name: bandit-report
-#        path: $GITHUB_WORKSPACE/dist/bandit/bandit-report.html
+#        path: $GITHUB_WORKSPACE/dist/bandit-report.html
     - name: Upload ZAP Report
       uses: actions/upload-artifact@v2
       with:
         name: zap-report
-        path: $GITHUB_WORKSPACE/dist/zap/zap-report.xml
+        path: $GITHUB_WORKSPACE/zap-report.xml
