--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,18 +30,25 @@ jobs:
 #    - name: Deploy to Heroku
 #      run: |
 #        git push heroku HEAD:master -f
-    - name: Run ZAP over deployed APP
-      run: docker run -v $GITHUB_WORKSPACE:/zap/wrk/:rw --network=host -t owasp/zap2docker-stable zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || true
-
-    - name: Check dirs
-      run: ls -al $GITHUB_WORKSPACE/dist
 #    - name: Upload Bandit Report
 #      uses: actions/upload-artifact@v2
 #      with:
 #        name: bandit-report
 #        path: $GITHUB_WORKSPACE/dist/bandit-report.html
-    - name: Upload ZAP Report
-      uses: actions/upload-artifact@v2
-      with:
-        name: zap-report
-        path: $GITHUB_WORKSPACE/zap-report.xml
+
+  scan:
+    runs-on: ubuntu-latest
+    container:
+      image: owasp/zap2docker-stable
+      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
+    steps:
+      - run: pwd && ls -l
+
+      - name: run zap baseline scan
+        run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
+
+      - name: Upload ZAP Report
+          uses: actions/upload-artifact@v2
+          with:
+            name: zap-report
+            path: ${{ github.workspace }}/zap-report.xml
