--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,11 @@ on:
       - master
 
 jobs:
-  build:
+  'Build, Deploy, and Scan':
     runs-on: ubuntu-latest
-
+#    container:
+#      image: owasp/zap2docker-stable
+#      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
     steps:
     - uses: actions/checkout@v1
     - name: Use Python
@@ -35,27 +37,9 @@ jobs:
 #      with:
 #        name: bandit-report
 #        path: $GITHUB_WORKSPACE/dist/bandit-report.html
-
-  scan:
-    runs-on: ubuntu-latest
-#    container:
-#      image: owasp/zap2docker-stable
-#      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
-    steps:
-      - uses: actions/checkout@v1
-      - name: Use Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip3 install -r requirements.txt -f
-
-      - run: pwd && ls -l
-#      - name: run zap baseline scan
-#        run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
-      - name: Upload ZAP Report to Faraday
-        run: |
-          python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_EMAIL }} -p ${{ secrets.FARADAY_PASSWORD }} -w xlabs5 -f zap-report.xml
+    - run: pwd && ls -l
+#    - name: run zap baseline scan
+#      run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
+    - name: Upload ZAP Report to Faraday
+      run: |
+        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_EMAIL }} -p ${{ secrets.FARADAY_PASSWORD }} -w xlabs5 -f zap-report.xml
