--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,38 +8,49 @@ on:
 jobs:
   build-deploy-scan:
     runs-on: ubuntu-latest
-#    container:
-#      image: owasp/zap2docker-stable
-#      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
+    container:
+      image: owasp/zap2docker-stable
+      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
     steps:
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
     - uses: actions/checkout@v1
     - name: Use Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-#    - name: Creating dist folder
-#      run: mkdir -p $GITHUB_WORKSPACE/dist
-#    - name: Run Bandit (Python code checker)
-#      run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit-report.html || true
-#    - name: Add remote origin
-#      run: |
-#        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-#    - name: Deploy to Heroku
-#      run: |
-#        git push heroku HEAD:master -f
-#    - name: Upload Bandit Report
-#      uses: actions/upload-artifact@v2
-#      with:
-#        name: bandit-report
-#        path: $GITHUB_WORKSPACE/dist/bandit-report.html
-    - run: pwd && ls -l
-#    - name: run zap baseline scan
-#      run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
+
+    - name: Creating dist folder
+      run: mkdir -p $GITHUB_WORKSPACE/dist
+
+    - name: Run Bandit (Python code checker)
+      run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit-report.html || true
+
+    - name: Add remote origin
+      run: |
+        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+
+    - name: Deploy to Heroku
+      run: |
+        git push heroku HEAD:master -f
+
+    - name: Upload Bandit Report
+      uses: actions/upload-artifact@v2
+      with:
+        name: bandit-report
+        path: $GITHUB_WORKSPACE/dist/bandit-report.html
+
+    - name: run zap baseline scan
+      run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
+
     - name: Upload ZAP Report to Faraday
       run: |
-        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_EMAIL }} -p ${{ secrets.FARADAY_PASSWORD }} -w xlabs5 -f zap-report.xml
+        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_EMAIL }} -p ${{ secrets.FARADAY_PASSWORD }} -w ${{ github.repository }}-${{ steps.date.outputs.date }} -f zap-report.xml
