--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,33 +6,37 @@ on:
       - master
 
 jobs:
-  build-deploy-scan:
+  strategy:
+    max-parallel: 1
+
+  build:
     runs-on: ubuntu-latest
-#    container:
-#      image: owasp/zap2docker-stable
-#      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
+
     steps:
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      - uses: actions/checkout@v1
 
-    - uses: actions/checkout@v1
-    - name: Use Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+      - name: Use Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Creating dist folder
-      run: mkdir -p $GITHUB_WORKSPACE/dist
+      - name: Creating dist folder
+        run: mkdir -p $GITHUB_WORKSPACE/dist
 
-    - name: Run Bandit (Python code checker)
-      run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit-report.html || true
+      - name: Run Bandit (Python code checker)
+        run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit-report.html || true
+
+      - name: Upload Bandit Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: bandit-report
+          path: $GITHUB_WORKSPACE/dist/bandit-report.html
 
     - name: Add remote origin
       run: |
@@ -42,14 +46,31 @@ jobs:
       run: |
         git push heroku HEAD:master -f
 
-    - name: Upload Bandit Report
-      uses: actions/upload-artifact@v2
-      with:
-        name: bandit-report
-        path: $GITHUB_WORKSPACE/dist/bandit-report.html
 
-#    - name: run zap baseline scan
-#      run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
+  scan:
+    runs-on: ubuntu-latest
+
+    container:
+      image: owasp/zap2docker-stable
+      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Use Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
+    - name: run zap baseline scan
+      run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
 
     - name: Upload ZAP Report to Faraday
       run: |
