--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Creating dist folder
-        run: mkdir -p $GITHUB_WORKSPACE/dist
 
       - name: Run Bandit (Python code checker)
-        run: bandit -r . -f html -o $GITHUB_WORKSPACE/dist/bandit-report.html || true
+        run: bandit -r . -f html -o bandit-report.html || true
 
       - name: Upload Bandit Report
         uses: actions/upload-artifact@v2
         with:
           name: bandit-report
-          path: $GITHUB_WORKSPACE/dist/bandit-report.html
+          path: bandit-report.html
 
       - name: Add remote origin
         run: |
@@ -48,6 +46,7 @@ jobs:
 
 
   scan:
+    needs: [build]
     runs-on: ubuntu-latest
 
     strategy:
@@ -75,6 +74,12 @@ jobs:
     - name: run zap baseline scan
       run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
 
-    - name: Upload ZAP Report to Faraday
-      run: |
-        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_EMAIL }} -p ${{ secrets.FARADAY_PASSWORD }} -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }} -f zap-report.xml
+    - name: Upload Zap Report Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: zap-report
+        path: zap-report.html
+
+#    - name: Upload ZAP Report to Faraday
+#      run: |
+#        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_EMAIL }} -p ${{ secrets.FARADAY_PASSWORD }} -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }} -f zap-report.xml
