--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,47 +6,47 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    strategy:
-      max-parallel: 1
-
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Use Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-
-      - name: Run Bandit (Python code checker)
-        run: bandit -r . -f html -o bandit-report.html || true
-
-      - name: Upload Bandit Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: bandit-report
-          path: bandit-report.html
-
-      - name: Add remote origin
-        run: |
-          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-
-      - name: Deploy to Heroku
-        run: |
-          git push heroku HEAD:master -f
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    strategy:
+#      max-parallel: 1
+#
+#    steps:
+#      - uses: actions/checkout@v1
+#
+#      - name: Use Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+#          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+#
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#
+#
+#      - name: Run Bandit (Python code checker)
+#        run: bandit -r . -f html -o bandit-report.html || true
+#
+#      - name: Upload Bandit Report
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: bandit-report
+#          path: bandit-report.html
+#
+#      - name: Add remote origin
+#        run: |
+#          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+#
+#      - name: Deploy to Heroku
+#        run: |
+#          git push heroku HEAD:master -f
 
 
   scan:
-    needs: [build]
+#    needs: [build]
     runs-on: ubuntu-latest
 
     strategy:
@@ -73,6 +73,12 @@ jobs:
 
     - name: run zap baseline scan
       run: zap-baseline.py -t https://faraday-vmpipelines.herokuapp.com -x zap-report.xml || echo 0
+
+    - name: Check dirs
+      run: pwd && ls -al
+
+    - name: Check dirs (2)
+      run: ls /zap/wrk
 
     - name: Upload Zap Report Artifact
       uses: actions/upload-artifact@v2
