--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,16 +66,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
-        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+#    - uses: actions/checkout@v1
+#    - name: Use Python
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+#        architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install -r requirements.txt
 
     - name: Get current date
       id: date
@@ -99,7 +99,7 @@ jobs:
 #        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_USERNAME }} -p ${{ secrets.FARADAY_PASSWORD }} -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} -f bandit-report/vulpy_faraday_bandit.xml
 
     - name: Upload Reports to Faraday
-      uses: flopezluksenberg/gha-faraday-report-uploader@main
+      uses: flopezluksenberg/gha-faraday-report-uploader
       with:
         host: ${{ secrets.FARADAY_HOST }}
         username: ${{ secrets.FARADAY_USERNAME }}
