--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
 #        python $GITHUB_WORKSPACE/import_scan.py -b ${{ secrets.FARADAY_HOST }} -e ${{ secrets.FARADAY_USERNAME }} -p ${{ secrets.FARADAY_PASSWORD }} -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} -f bandit-report/vulpy_faraday_bandit.xml
 
     - name: Upload Reports to Faraday
-      uses: flopezluksenberg/gha-faraday-report-uploader
+      uses: flopezluksenberg/gha-faraday-report-uploader@main
       with:
         host: ${{ secrets.FARADAY_HOST }}
         username: ${{ secrets.FARADAY_USERNAME }}
