--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,37 +32,36 @@ jobs:
         with:
           name: bandit-report
           path: vulpy_faraday_bandit.xml
-#
-#      - name: Add remote origin
-#        run: |
-#          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-#
-#      - name: Deploy to Heroku
-#        run: |
-#          git push heroku HEAD:master -f
+
+      - name: Add remote origin
+        run: |
+          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+
+      - name: Deploy to Heroku
+        run: |
+          git push heroku HEAD:master -f
 
 
-#  scan:
-#    needs: [build]
-#    runs-on: ubuntu-latest
-#
-#    container:
-#      image: owasp/zap2docker-stable
-#      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
-#
-#    steps:
-#    - name: run zap baseline scan
-#      run: zap-baseline.py -t ${{ secrets.ZAP_SCAN_URL }} -x zap-report.xml || echo 0
-#
-#    - name: Upload Zap Report Artifact
-#      uses: actions/upload-artifact@v2
-#      with:
-#        name: zap-report
-#        path: zap-report.xml
+  scan:
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    container:
+      image: owasp/zap2docker-stable
+      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
+
+    steps:
+    - name: run zap baseline scan
+      run: zap-baseline.py -t ${{ secrets.ZAP_SCAN_URL }} -x zap-report.xml || echo 0
+
+    - name: Upload Zap Report Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: zap-report
+        path: zap-report.xml
 
   upload:
-#    needs: [scan]
-    needs: [build]
+    needs: [scan]
     runs-on: ubuntu-latest
 
     steps:
@@ -70,11 +69,11 @@ jobs:
       id: date
       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-#    - name: Download Zap Report Artifact
-#      uses: actions/download-artifact@master
-#      with:
-#        name: zap-report
-#        path: zap-report
+    - name: Download Zap Report Artifact
+      uses: actions/download-artifact@master
+      with:
+        name: zap-report
+        path: zap-report
 
     - name: Download Bandit Report Artifact
       uses: actions/download-artifact@master
