--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+bandit==1.6.2
 click==7.1.2
 Flask==1.1.2
+gitdb==4.0.5
+GitPython==3.1.11
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pbr==5.5.1
+PyYAML==5.3.1
+six==1.15.0
+smmap==3.0.4
+stevedore==3.3.0
 Werkzeug==1.0.1
