--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-
       - name: Run Bandit (Python code checker)
         run: bandit -r . -f xml -o flaskapp_faraday_bandit.xml || true
 
@@ -49,7 +48,6 @@ jobs:
     container:
       image: owasp/zap2docker-stable
       options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
-
 
     steps:
     - name: run zap baseline scan
@@ -82,11 +80,22 @@ jobs:
         name: bandit-report
         path: bandit-report
 
+#     Faraday CLI approach
     - name: Upload Reports to Faraday
-      uses: infobyte/gha-faraday-report-uploader@main
-      with:
-        host: ${{ secrets.FARADAY_HOST }}
-        username: ${{ secrets.FARADAY_USERNAME }}
-        password: ${{ secrets.FARADAY_PASSWORD }}
-        workspace: ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }}
-        files: bandit-report/flaskapp_faraday_bandit.xml zap-report/zap-report.xml
+      run: |
+        python -m pip install --upgrade pip
+        pip install faraday-cli
+        faraday-cli --auth -f ${{ secrets.FARADAY_HOST }} -u ${{ secrets.FARADAY_USERNAME }} -p ${{ secrets.FARADAY_PASSWORD }}
+        faraday-cli create_ws ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }}
+        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} bandit-report/flaskapp_faraday_bandit.xml
+        faraday-cli process_report -w ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }} bandit-report/zap-report.xml
+
+#     Custom GHA approach
+#    - name: Upload Reports to Faraday
+#      uses: infobyte/gha-faraday-report-uploader@main
+#      with:
+#        host: ${{ secrets.FARADAY_HOST }}
+#        username: ${{ secrets.FARADAY_USERNAME }}
+#        password: ${{ secrets.FARADAY_PASSWORD }}
+#        workspace: ${{ github.event.repository.name }}-${{ steps.date.outputs.date }}-${{ github.run_number }}
+#        files: bandit-report/flaskapp_faraday_bandit.xml zap-report/zap-report.xml
