--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,61 +6,61 @@ on:
       - master
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Use Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-          architecture: 'x64'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Bandit (Python code checker)
-        run: bandit -r . -f xml -o flaskapp_faraday_bandit.xml || true
-
-      - name: Upload Bandit Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: bandit-report
-          path: flaskapp_faraday_bandit.xml
-
-      - name: Add remote origin
-        run: |
-          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-
-      - name: Deploy to Heroku
-        run: |
-          git push heroku HEAD:master -f
-
-
-  scan:
-    needs: [build]
-    runs-on: ubuntu-latest
-
-    container:
-      image: owasp/zap2docker-stable
-      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
-
-    steps:
-    - name: run zap baseline scan
-      run: zap-baseline.py -t ${{ secrets.ZAP_SCAN_URL }} -x zap-report.xml || echo 0
-
-    - name: Upload Zap Report Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: zap-report
-        path: zap-report.xml
+#  build:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v1
+#
+#      - name: Use Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: '3.x'
+#          architecture: 'x64'
+#
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          pip install -r requirements.txt
+#
+#      - name: Run Bandit (Python code checker)
+#        run: bandit -r . -f xml -o flaskapp_faraday_bandit.xml || true
+#
+#      - name: Upload Bandit Report
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: bandit-report
+#          path: flaskapp_faraday_bandit.xml
+#
+#      - name: Add remote origin
+#        run: |
+#          git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
+#
+#      - name: Deploy to Heroku
+#        run: |
+#          git push heroku HEAD:master -f
+#
+#
+#  scan:
+#    needs: [build]
+#    runs-on: ubuntu-latest
+#
+#    container:
+#      image: owasp/zap2docker-stable
+#      options: --user root -v ${{ github.workspace }}:/zap/wrk/:rw
+#
+#    steps:
+#    - name: run zap baseline scan
+#      run: zap-baseline.py -t ${{ secrets.ZAP_SCAN_URL }} -x zap-report.xml || echo 0
+#
+#    - name: Upload Zap Report Artifact
+#      uses: actions/upload-artifact@v2
+#      with:
+#        name: zap-report
+#        path: zap-report.xml
 
   upload:
-    needs: [scan]
+#    needs: [scan]
     runs-on: ubuntu-latest
 
     steps:
